# openclaw-enforce

./: .gitignore  .npmignore  ARCHITECTURE.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  build.rs  build.sh  index.d.ts  index.js  package.json
examples/: INTERACTIVE.md  README.md  example.js  index.js  interactive.js  package.json  policy.toml  standalone-api.js
proto/: enforce.proto
src/: lib.rs  main.rs
src/audit/: mod.rs
src/capabilities/: mod.rs
src/fs/: mod.rs  validator.rs
src/grpc/: server.rs
src/network/: mod.rs
src/policy/: mod.rs  parser.rs
src/process/: mod.rs
src/proto/: demo.rs  mod.rs  openclaw.enforce.rs
