[package]
name = "openclaw-enforce"
version = "0.1.0"
edition = "2021"
authors = ["Xettri"]
description = "Security enforcement layer for OpenClaw AI assistant"
license = "MIT"
repository = "https://github.com/xettri/openclaw-enforce"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"

# gRPC for IPC communication
tonic = "0.12"
tonic-health = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Path manipulation
path-absolutize = "3.1"
glob = "0.3"

# Async channels
crossbeam-channel = "0.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific security modules
caps = "0.5"
landlock = "0.4"
seccompiler = "0.4"
nix = { version = "0.29", features = ["user", "process", "resource"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS sandbox (will use later)
libc = "0.2"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "openclaw-enforce"
path = "src/main.rs"

[profile.release]
opt-level = "z"        # Optimize for size instead of speed
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization, slower compile
strip = true           # Remove debug symbols
panic = "abort"        # Smaller panic handler

# Even smaller binary for embedded/constrained environments
[profile.release-min]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
