[package]
name = "openclaw-enforce"
version = "0.1.0"
edition = "2021"
authors = ["Xettri"]
description = "Native security enforcement module for OpenClaw AI assistant"
license = "MIT"
repository = "https://github.com/xettri/openclaw-enforce"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI for Node.js bindings
napi = "2.16"
napi-derive = "2.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Path manipulation
path-absolutize = "3.1"
glob = "0.3"

[build-dependencies]
napi-build = "2.1"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
strip = true           # Remove debug symbols
panic = "abort"        # Smaller panic handler
